--- a/client/extension-online/manifest.json
+++ b/client/extension-online/manifest.json
@@ -3,14 +3,14 @@
   "short_name": "Rembr App",
   "name": "React Extension",
   "version": "1.0", 
-  "permissions": ["http://*/", "activeTab", "tabs", "declarativeWebRequest", "bookmarks", "*://*/*"],
+  "permissions": ["http://*/", "https://*/", "activeTab", "tabs", "declarativeWebRequest", "bookmarks", "http://localhost:3000/*", "http://localhost:3001/*" ],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["<all_urls>", "http://localhost:3001/*"],
       "js": [ "jquery.js", "content-script.js"]
     }
   ],
