--- a/client/extension-online/manifest.json
+++ b/client/extension-online/manifest.json
@@ -3,28 +3,20 @@
   "short_name": "Rembr App",
   "name": "React Extension",
   "version": "1.0", 
-  "permissions": ["http://*/", "https://*/", "activeTab", "tabs", "declarativeWebRequest", "bookmarks", "http://localhost:3000/*", "http://localhost:3001/*" ],
+  "permissions": ["http://*/", "https://*/", "activeTab", "tabs", "declarativeWebRequest", "bookmarks", "http://localhost:3000/*", "http://localhost:3001/*", "https://accounts.google.com/o/oauth2/token" ],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>", "http://localhost:3001/*"],
-      "js": [ "jquery.js", "content-script.js"]
+      "matches": ["<all_urls>", "http://localhost:3001/*", "http://www.google.com/robots.txt*"],
+      "js": [ "jquery.js", "oauth2/oauth2_inject.js", "content-script.js"],
+      "run_at": "document_start"
     }
   ],
   "browser_action": {
     "default_popup": "rembr-ext.html",
     "default_title": "React Ext"
-  },
-  "commands": {
-    "open-google": {
-      "description": "Open a tab to google.com",
-      "suggested_key": { "default": "Ctrl+Shift+L" }
-    },
-    "_execute_browser_action": {
-      "suggested_key": { "default": "Ctrl+Shift+K" }
-    }
   }
 }
