--- a/client/extension-online/manifest.json
+++ b/client/extension-online/manifest.json
@@ -4,7 +4,7 @@
   "short_name": "Rembr App",
   "name": "React Extension",
   "version": "1.0.1", 
-  "permissions": ["http://*/", "https://*/", "activeTab", "tabs", "declarativeWebRequest", "bookmarks", "identity", "http://localhost:3000/*", "http://localhost:3001/*" ],
+  "permissions": ["http://*/", "https://*/", "activeTab", "tabs", "declarativeWebRequest", "bookmarks", "identity", "identity.email", "http://localhost:3000/*", "http://localhost:3001/*", "https://accounts.google.com/*", "https://www.googleapis.com/*"],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
@@ -19,6 +19,7 @@
     "client_id": "610105421590-cmlmi74luvqehuok9pbd8bfmeacf3qn5.apps.googleusercontent.com",
     "scopes": [
       "https://www.googleapis.com/auth/drive"
+      
     ]
   },
   "browser_action": {
