--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
+    "express-jwt": "^5.3.0",
     "mongoose": "^4.11.7",
     "react-router-dom": "^4.2.2"
   }
