--- a/client/extension-online/manifest.json
+++ b/client/extension-online/manifest.json
@@ -11,7 +11,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>", "http://localhost:3001/*"],
+      "matches": ["<all_urls>", "http://localhost:3001/*", "http://localhost:3000/*"],
       "js": [ "jquery.js", "content-script.js"]
     }
   ],
