--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "auth0-js": "^9.2.1",
     "axios": "^0.16.2",
+    "jwt-decode": "^2.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14"
   },
