--- a/client/extension-online/manifest.json
+++ b/client/extension-online/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "short_name": "Rembr App",
   "name": "React Extension",
-  "version": "1.0.1", 
+  "version": "1.0.3", 
   "permissions": ["http://*/", "https://*/", "activeTab", "tabs", "bookmarks", "identity",  "identity.email", "http://localhost:3000/*", "http://localhost:3001/*", "https://accounts.google.com/*", "https://www.googleapis.com/*"],
   "background": {
     "scripts": ["background.js"],
@@ -17,10 +17,7 @@
   ],
   "oauth2": {
     "client_id": "610105421590-cmlmi74luvqehuok9pbd8bfmeacf3qn5.apps.googleusercontent.com",
-    "scopes": [
-      "https://www.googleapis.com/auth/drive"
-      
-    ]
+    "scopes": ["profile", "email", "openid"]
   },
   "browser_action": {
     "default_popup": "rembr-ext.html",
