--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
     "auth0-js": "^9.2.2",
     "axios": "^0.16.2",
     "jwt-decode": "^2.2.0",
+    "particle.js": "^1.0.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-drag-and-drop": "^2.4.0",
+    "react-particles-js": "^2.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.14"
