--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-drag-and-drop": "^2.4.0",
+    "react-fontawesome": "^1.6.1",
     "react-particles-js": "^2.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.1.2",
