--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,10 @@
     "react-drag-and-drop": "^2.4.0",
     "react-fontawesome": "^1.6.1",
     "react-particles-js": "^2.1.0",
-    "react-router": "^4.2.0",
+    "react-router": "^3.2.0",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "react-tooltip": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
