--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "auth0-js": "^9.3.0",
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "bson": "^3.0.2",
     "dotenv": "^5.0.0",
     "express": "^4.15.4",
     "indico.io": "^0.10.5",
