--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^2.0.5",
     "react-tooltip": "^3.4.0",
-    "redux": "4.0.0",
-    "redux-promise": "^0.6.0"
+    "redux": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
