--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ script:
 
 after_success:
   - docker build -t dquez/rembr-client ./client
-
-
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - docker push dquez/rembr-client
     
