changed port from 8080 to 3000 for nginx, took out api url trim in conf file

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,8 +2,8 @@ upstream client {
     server client:3000;
 }
 
-upstream api {
-    server api:8080;
+upstream server {
+    server server:3001;
 }
 
 server {
@@ -21,7 +21,6 @@ server {
     }
 
     location /api {
-        rewrite /api/(.*) /$1 break;
         proxy_pass http://api;
     }
 }
