--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     image: 'mongo:latest'
     ports:
       - "27017:27017"
+      - "45011:45011"
   server:
     build:
       dockerfile: Dockerfile
@@ -18,6 +19,11 @@ services:
     volumes:
       - /app/node_modules
       - ./server:/app
+    env_file:
+      - ./server/.env
+    environment:
+      - MONGODB_URI=${MONGODB_URI}
+      
   client:
     build:
       dockerfile: Dockerfile.dev
