changed dockerfile for nginx server, changed port mapping

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   nginx:
     restart: always
     build:
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
       context: ./nginx
     ports:
-      - '3050:80'
+      - '8080:80'
   mongodb:
     image: 'mongo:latest'
     ports:
