--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-node_modules
+server/node_modules
 client/node_modules
 yarn.lock
 client/yarn.lock
 client/package-lock.json
 .DS_Store
-.env
+server/.env
